<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".activity.LogInActivity">
    <ImageView
        android:id="@+id/ivSinInLogo"
        android:layout_width="350dp"
        android:layout_height="280dp"
        android:src="@drawable/sin_in_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/you_are_ready_to_be_that_one"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivSinInLogo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_end_margin"
        android:layout_marginEnd="@dimen/start_end_margin"
        android:layout_marginTop="10dp"
        app:boxStrokeWidth="2dp"
        app:boxCornerRadiusBottomEnd="@dimen/til_radius"
        app:boxCornerRadiusBottomStart="@dimen/til_radius"
        app:boxCornerRadiusTopEnd="@dimen/til_radius"
        app:boxCornerRadiusTopStart="@dimen/til_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        tools:ignore="ExtraText"
        >
        <EditText
            android:id="@+id/etSinInEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_id"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/start_end_margin"
        android:layout_marginEnd="@dimen/start_end_margin"
        android:layout_marginTop="10dp"
        app:boxStrokeWidth="2dp"
        app:passwordToggleEnabled="true"
        app:boxCornerRadiusBottomEnd="@dimen/til_radius"
        app:boxCornerRadiusBottomStart="@dimen/til_radius"
        app:boxCornerRadiusTopEnd="@dimen/til_radius"
        app:boxCornerRadiusTopStart="@dimen/til_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        tools:ignore="ExtraText">
        <EditText
            android:id="@+id/etSinInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textSize="@dimen/et_text_size"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/forgot_password"
        android:textSize="18sp"
        android:textColor="@color/blue"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/main_button_bg"
        android:gravity="center"
        android:text="@string/Login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/or"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btnSignInWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#D3D3D3"
        app:cardCornerRadius="30dp"
        app:layout_constraintTop_toBottomOf="@id/tvOr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="5dp"

                android:contentDescription="@string/image"
                android:src="@drawable/g_logo"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/login_with_google"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"

                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/btnSignInWithGoogle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <TextView
            android:id="@+id/tvNewHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_here"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/Register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/register"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>